--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
         <td>{{album.albumReleaseDate}}</td>
         <td>
           <a href="{% url 'edit_album' album.id%}" class="btn btn-warning">Edit</a>
-          <a href="{% url 'delete_album' album.id%}" class="btn btn-danger">Delete</a>
+          <a href="{% url 'delete_album' album.musician.id%}" class="btn btn-danger"> Delete</a>
         </td>
       </tr>
       {% endfor %}
