--- a/musician/templates/add_musician.html
+++ b/musician/templates/add_musician.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% load crispy_forms_tags %} {% block content %}
 
 <form class="w-50 m-auto" method="post">
-  <h1>Add Musician</h1>
+  <h1>{{title}}</h1>
   {% csrf_token %} {{form | crispy}}
   <button>Submit</button>
 </form>
